--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
 <p>This blog documents the development steps of the Orbital series as well as the overall goal and philosophy at Orbital Velocity. I hope this will spur a community around orbital physics in games, media, and mainstream culture, it's implications in how we live our future, and where we may go given a set of realistic scientific and technological constraints.</p>
 
 <h3>
+<a name="to-interplanetary-space" class="anchor" href="#to-interplanetary-space"><span class="octicon octicon-link"></span></a>To Interplanetary Space!</h3>
+
+<p>Ever since the 2009 Gizmodo article on what actual <a href="http://gizmodo.com/5426453/the-physics-of-space-battles">space combat</a> would look like (this is the 2014 one, couldn't find the older one)</p>
+
+<hr>
+
+<h3>
+<a name="orbital-vector" class="anchor" href="#orbital-vector"><span class="octicon octicon-link"></span></a>Orbital Vector</h3>
+
+<h3>
+<a name="orbital-domination" class="anchor" href="#orbital-domination"><span class="octicon octicon-link"></span></a>Orbital Domination</h3>
+
+<p>Orbital Vector</p>
+
+<h3>
 <a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>About Me</h3>
 
 <p>A grad student who should be working on his thesis, but loves loves loves space and gaming and hard science fiction.</p>
