--- a/index.html
+++ b/index.html
@@ -31,22 +31,36 @@
           <h3>
 <a name="welcome-to-orbital-velocity" class="anchor" href="#welcome-to-orbital-velocity"><span class="octicon octicon-link"></span></a>Welcome to Orbital Velocity</h3>
 
-<p>This blog documents the development steps of the Orbital series as well as the overall goal and philosophy at Orbital Velocity. I hope this will spur a community around orbital physics in games, media, and mainstream culture, it's implications in how we live our future, and where we may go given a set of realistic scientific and technological constraints.</p>
+<p>This blog documents the development steps of the Orbital series as well as the overall goal and philosophy at Orbital Velocity. I hope this will spur a community around orbital physics in games, media and mainstream culture, it's implications in how we live our future, and where we may go given a set of realistic scientific and technological constraints.</p>
 
 <h3>
 <a name="to-interplanetary-space" class="anchor" href="#to-interplanetary-space"><span class="octicon octicon-link"></span></a>To Interplanetary Space!</h3>
 
-<p>Ever since the 2009 Gizmodo article on what actual <a href="http://gizmodo.com/5426453/the-physics-of-space-battles">space combat</a> would look like (this is the 2014 one, couldn't find the older one)</p>
+<p>Orbiting in space is not merely floating on inertia in empty space. Orbiting is more or less falling and missing the ground. You are constantly bound to one or more gravity wells. This simple mechanic changes the battle field completely in very counter-intuitive ways.</p>
+
+<pre><code>- **The higher you are, the slower you move** But the faster you go, the higher you get. If you want to catch-up with some one ahead of you, you must slow down first. 
+- **Fuel is a scarce resource** You can trade fuel for speed, or time for fuel. You can speed up to catch up with someone, but you may run out of fuel and drift into the ether. The less fuel you have, the faster you can accelerate.
+- **There is no fog of war** You can see a shuttle fire its maneuver jets out from Pluto. There is no sneaking up behind someone. Not from nebular clouds, asteroid belts, or planetary rings. Engagements are determined not by sensor range, but weapon range.
+- **It's very boring** Traveling to the moon takes a day or two, to Mars takes months, and years to farther planets. Any ship-to-ship engagements would be known weeks or months ahead of time, giving both sides plenty of time to calculate their next moves.
+</code></pre>
+
+<p>While these limitations could be pretty boring to a normal space sim, I think they can be very fertile to the imagination. Rules of engagement would be vastly different. How would nations and sovereignties hash out their disputes given these vast distances? How could space combat be fun given such large time-scales?</p>
 
 <hr>
 
 <h3>
 <a name="orbital-vector" class="anchor" href="#orbital-vector"><span class="octicon octicon-link"></span></a>Orbital Vector</h3>
 
-<h3>
-<a name="orbital-domination" class="anchor" href="#orbital-domination"><span class="octicon octicon-link"></span></a>Orbital Domination</h3>
+<p>If the only thing keeping a realistic space combat sim from being fun in space is the time then it can be either sped up or shortened. Speeding up means much less time to react and ships will pass by way too fast to ever see. Shrinking the world means shorter orbital periods and decreasing distances to other crafts. </p>
 
-<p>Orbital Vector</p>
+<p>Orbital Vector is an arcade style space sim that models orbital trajectories around super dense asteroids or artificial gravity generators to control vital resources or strategically important regions. Player will be able to control a maneuverable fighter craft with a diverse set of weaponry and finite fuel or deltaV. They must capture orbital nodes or land on the mother well to reprogram its logic matrix. There well be weapon and fuel depots at various orbits, combat support from your side, that you can make use of to extend your combat duration. But be careful, as docking will make you very vulnerable to enemy fire and could be fuel-consumming.  </p>
+
+<h3>
+<a name="orbital-domination-working-title" class="anchor" href="#orbital-domination-working-title"><span class="octicon octicon-link"></span></a>Orbital Domination (working title)</h3>
+
+<p>A civilization-level strategy game where each nation/state must compete over limited resources and trade in a highly interconnected solar economy. Some nations intend on dominating its neighbors with military might while others focus on economic control. An ally may backstab you if coerced by another nation in the form of bribes or economic sanctions. There are public pledges of support and backdoor channels. Changing tide in economy could change trade negotiations on hydrogen tariffs from the time Jupiter harvesting begins and when the first shipment of deuterium pods reenter earth's atmosphere. A nation may sell food to its enemy in order to fund a defensive solar array weapon. Import tariffs could start a war. Piracy on interplanetary routes may be a pretext for an planetary invasion.</p>
+
+<p>There are a lot of things that could be done with a solar system setting turn based strategy game. I think this just scratches the surface. Imagine you must maintain relationship with an enemy nation until your much-needed deuterium shipment leaves the borders of its vast reaches in to space.</p>
 
 <h3>
 <a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>About Me</h3>
