Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a name="welcome-to-orbital-velocity" class="anchor" href="#welcome-to-orbital-velocity"><span class="octicon octicon-link"></span></a>Welcome to Orbital Velocity</h3>
 
-<p>This blog documents the development steps of the Orbital series as well as the overall goal and philosophy at Orbital Velocity. I hope this will spur a community around orbital physics in games, media and mainstream culture, it's implications in how we live our future, and where we may go given a set of realistic scientific and technological constraints.</p>
+<p>This blog documents the development steps of the Orbital game series as well as the overall goal and philosophy at Orbital Velocity. The games will be open sourced under GPL V2 by the end of 2014, along with a set of tutorials/guides to spur community involvement and facilitate more people entering game development. I am currently learning OpenGL as I go and I hope to share what I learned and get feed back on the games as they mature. Feel free to fork and create your own realistic (or not) space games! </p>
 
 <h3>
 <a name="to-interplanetary-space" class="anchor" href="#to-interplanetary-space"><span class="octicon octicon-link"></span></a>To Interplanetary Space!</h3>
@@ -59,6 +59,44 @@
 <p>If the only thing keeping a realistic space combat sim from being fun in space is the time then it can be either sped up or shortened. Speeding up means much less time to react and ships will pass by way too fast to ever see. Shrinking the world means shorter orbital periods and decreasing distances to other crafts. </p>
 
 <p>Orbital Vector is an arcade style space sim that models orbital trajectories around super dense asteroids or artificial gravity generators to control vital resources or strategically important regions. Player will be able to control a maneuverable fighter craft with a diverse set of weaponry and finite fuel or deltaV. They must capture orbital nodes or land on the mother well to reprogram its logic matrix. There well be weapon and fuel depots at various orbits, combat support from your side, that you can make use of to extend your combat duration. But be careful, as docking will make you very vulnerable to enemy fire and could be fuel-consumming.  </p>
+
+<p>Game play</p>
+
+<ul>
+<li>Third person view of ship, with zoom levels from ship to planet scale</li>
+<li>Trajectory predictions for targeting</li>
+<li>Proximity to incoming trajectories</li>
+<li>Computing firing solutions via GPS satellites</li>
+<li>Anti-missile drones for impact deflection</li>
+<li>EVA repair activity during down time</li>
+</ul>
+
+<p>Graphical feature wish-list</p>
+
+<ul>
+<li>HDR/bloom/flair</li>
+<li>Anti-aliasing</li>
+<li>Filmic grain</li>
+<li>Film quality motion blur</li>
+<li>Bokeh?</li>
+<li>Deferred rendering</li>
+<li>Soft shadows</li>
+<li>BRDF rendering</li>
+<li>Dynamic tessellation</li>
+<li>High quality 3D lines</li>
+<li>Particles/sfx</li>
+</ul>
+
+<p>Physics / Misc wish-list</p>
+
+<ul>
+<li>Physic driven animation - missiles, ship maneuvers</li>
+<li>Stabilizer via gyroscopic motion dampeners</li>
+<li>Continuous collision detection</li>
+<li>AI that can predict trajectories and evade incoming warheads</li>
+<li>Goal oriented AI for control-point maps</li>
+<li>Multi-gravity well maps</li>
+</ul>
 
 <hr>
 
